--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "node": "~0.4"
   },
   "dependencies": {
-    "sequelize": "~1.1"
+    "sequelize": "1.3.x"
   },
   "devDependencies": {
     "connect": "~1.6"
